// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button base demo works fine 1`] = `
<base>
  <wx-view
    class="box"
  >
    <t-button
      disabled="{{false}}"
      size="large"
      theme="primary"
    >
      主按钮
    </t-button>
    <t-button
      disabled="{{false}}"
      size="large"
      theme="light"
    >
      浅按钮
    </t-button>
    <t-button
      disabled="{{false}}"
      size="large"
    >
      默认按钮
    </t-button>
    <wx-view
      style="height: 32rpx"
    />
    <t-button
      disabled="{{false}}"
      size="large"
      theme="primary"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      disabled="{{false}}"
      size="large"
      theme="primary"
      variant="text"
    >
      文字按钮
    </t-button>
  </wx-view>
</base>
`;

exports[`Button Button block-btn demo works fine 1`] = `
<block-btn>
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
    >
      填充按钮
    </t-button>
  </wx-view>
</block-btn>
`;

exports[`Button Button ghost-btn demo works fine 1`] = `
<ghost-btn>
  <wx-view
    class="full-width"
  >
    <wx-view
      class="box"
    >
      <t-button
        disabled=""
        ghost="{{true}}"
        theme="primary"
      >
        大按钮
      </t-button>
      <t-button
        disabled=""
        ghost="{{true}}"
        theme="danger"
      >
        大按钮
      </t-button>
      <t-button
        disabled=""
        ghost="{{true}}"
      >
        大按钮
      </t-button>
    </wx-view>
  </wx-view>
</ghost-btn>
`;

exports[`Button Button group-btn demo works fine 1`] = `
<group-btn>
  <wx-view
    class="group"
  >
    <t-button
      block="{{true}}"
      size="large"
      theme="light"
    >
      填充按钮
    </t-button>
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
    >
      填充按钮
    </t-button>
  </wx-view>
</group-btn>
`;

exports[`Button Button icon-btn demo works fine 1`] = `
<icon-btn>
  <wx-view
    class="box"
  >
    <t-button
      content="填充按钮"
      icon="app"
      theme="primary"
    />
    <t-button
      icon="app"
      shape="round"
      theme="primary"
    >
      带图标按钮
    </t-button>
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      ariaLabel="返回"
      icon="chevron-left"
      shape="square"
      theme="primary"
    />
    <t-button
      ariaLabel="返回"
      icon="chevron-left"
      shape="circle"
      theme="primary"
    />
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      loading="{{true}}"
      shape="square"
      theme="primary"
    />
    <t-button
      loading="{{true}}"
      theme="primary"
    >
      加载中...
    </t-button>
  </wx-view>
</icon-btn>
`;

exports[`Button Button shape demo works fine 1`] = `
<shape>
  <wx-view
    class="box align-bottom"
  >
    <t-button
      size="large"
      theme="primary"
    >
      填充按钮
    </t-button>
    <t-button
      icon="app"
      shape="square"
      size="large"
      theme="primary"
    />
  </wx-view>
  <wx-view
    style="height: 32rpx"
  />
  <wx-view
    class="box align-bottom"
  >
    <t-button
      shape="round"
      size="large"
      theme="primary"
    >
      填充按钮
    </t-button>
    <t-button
      icon="app"
      shape="circle"
      size="large"
      theme="primary"
    />
  </wx-view>
</shape>
`;

exports[`Button Button size demo works fine 1`] = `
<size>
  <wx-view
    class="box align-bottom"
  >
    <t-button
      size="large"
      tClass="external-class"
      theme="primary"
    >
      大号按钮 44
    </t-button>
    <t-button
      tClass="external-class"
      theme="primary"
    >
      中号按钮 40
    </t-button>
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      size="small"
      tClass="external-class"
      theme="primary"
    >
      小号按钮 36
    </t-button>
  </wx-view>
</size>
`;

exports[`Button Button theme demo works fine 1`] = `
<theme>
  <wx-view
    class="box"
  >
    <t-button
      size="large"
    >
      主按钮
    </t-button>
    <t-button
      size="large"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      size="large"
      variant="text"
    >
      文字按钮
    </t-button>
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      size="large"
      theme="primary"
    >
      主按钮
    </t-button>
    <t-button
      size="large"
      theme="primary"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      size="large"
      theme="primary"
      variant="text"
    >
      文字按钮
    </t-button>
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      size="large"
      theme="danger"
    >
      主按钮
    </t-button>
    <t-button
      size="large"
      theme="danger"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      size="large"
      theme="danger"
      variant="text"
    >
      文字按钮
    </t-button>
  </wx-view>
  <wx-view
    class="box"
  >
    <t-button
      size="large"
      theme="light"
    >
      主按钮
    </t-button>
    <t-button
      size="large"
      theme="light"
      variant="outline"
    >
      描边按钮
    </t-button>
    <t-button
      size="large"
      theme="light"
      variant="text"
    >
      文字按钮
    </t-button>
  </wx-view>
</theme>
`;
